Replace table with direct links and spacing div for social media links

--- a/app/templates/signature.html
+++ b/app/templates/signature.html
@@ -41,21 +41,10 @@
                         {% endif %}
                         <tr>
                             <td valign="top" style="padding:0px 0px 18px;vertical-align:top">
-                                <table cellpadding="0" cellspacing="0" border="0" style="color:rgb(0,0,0);font-size:9px;background:none;border-collapse:collapse;border-spacing:0px;border:0px;margin:0px;padding:0px;width:274px;max-width:288px">
-                                    <tbody>
-                                        <tr>
-                                            <td style="padding:3px 20px 0px 0px;vertical-align:top;width:101px;height:22px;">
-                                                <a href="https://stackedfarm.com/" style="color:rgb(77,77,77);font-size:10px;line-height:16px;letter-spacing:0.2px;display:inline-block;padding-top:1px;" target="_blank">stackedfarm.com</a>&nbsp;
-                                            </td>
-                                            <td style="padding:3px 20px 0px 0px;vertical-align:top;width:63px;height:22px;">
-                                                <a href="https://www.linkedin.com/company/stackedfarm/" style="color:rgb(77,77,77);font-size:10px;line-height:16px;letter-spacing:0.2px;display:inline-block;padding-top:1px;" target="_blank">LinkedIn</a>&nbsp;
-                                            </td>
-                                            <td style="padding:3px 0px 0px 0px;vertical-align:top;height:22px;">
-                                                <a href="https://www.instagram.com/stackedfarm/" style="color:rgb(77,77,77);font-size:10px;line-height:16px;letter-spacing:0.2px;display:inline-block;padding-top:1px;" target="_blank">Instagram</a>&nbsp;
-                                            </td>
-                                        </tr>
-                                    </tbody>
-                                </table>
+                                <div style="line-height:0;font-size:0;height:20px;">&nbsp;</div>
+                                <a href="https://stackedfarm.com/" style="color:rgb(77,77,77);font-size:11px;line-height:11px;letter-spacing:0.2px;display:inline-block;margin-right:20px;" target="_blank">stackedfarm.com</a>
+                                <a href="https://www.linkedin.com/company/stackedfarm/" style="color:rgb(77,77,77);font-size:11px;line-height:11px;letter-spacing:0.2px;display:inline-block;margin-right:20px;" target="_blank">LinkedIn</a>
+                                <a href="https://www.instagram.com/stackedfarm/" style="color:rgb(77,77,77);font-size:11px;line-height:11px;letter-spacing:0.2px;display:inline-block;" target="_blank">Instagram</a>
                             </td>
                         </tr>
                     </tbody>
