--- a/public/app/templates/signature.html
+++ b/public/app/templates/signature.html
@@ -41,10 +41,18 @@
                         {% endif %}
                         <tr>
                             <td valign="top" style="padding:0px 0px 18px;vertical-align:top">
-                                <div style="line-height:0;font-size:0;height:20px;">&nbsp;</div>
-                                <a href="https://stackedfarm.com/" style="color:rgb(77,77,77);font-size:11px;line-height:11px;letter-spacing:0.2px;display:inline-block;margin-right:20px;" target="_blank">stackedfarm.com</a>
-                                <a href="https://www.linkedin.com/company/stackedfarm/" style="color:rgb(77,77,77);font-size:11px;line-height:11px;letter-spacing:0.2px;display:inline-block;margin-right:20px;" target="_blank">LinkedIn</a>
-                                <a href="https://www.instagram.com/stackedfarm/" style="color:rgb(77,77,77);font-size:11px;line-height:11px;letter-spacing:0.2px;display:inline-block;" target="_blank">Instagram</a>
+                                <table cellpadding="0" cellspacing="0" border="0" style="border-collapse:collapse;border-spacing:0;width:100%;">
+                                    <tr>
+                                        <td height="12" style="font-size:0;line-height:0;">&nbsp;</td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            <span style="color:rgb(77,77,77);font-size:11px;margin-right:20px;"><a href="https://stackedfarm.com/" style="color:rgb(77,77,77);text-decoration:none;" target="_blank">stackedfarm.com</a></span>
+                                            <span style="color:rgb(77,77,77);font-size:11px;margin-right:20px;"><a href="https://www.linkedin.com/company/stackedfarm/" style="color:rgb(77,77,77);text-decoration:none;" target="_blank">LinkedIn</a></span>
+                                            <span style="color:rgb(77,77,77);font-size:11px;"><a href="https://www.instagram.com/stackedfarm/" style="color:rgb(77,77,77);text-decoration:none;" target="_blank">Instagram</a></span>
+                                        </td>
+                                    </tr>
+                                </table>
                             </td>
                         </tr>
                     </tbody>
