--- a/public/app/templates/signature.html
+++ b/public/app/templates/signature.html
@@ -40,19 +40,26 @@
                         </tr>
                         {% endif %}
                         <tr>
-                            <td valign="top" style="padding:0px 0px 18px;vertical-align:top">
-                                <table cellpadding="0" cellspacing="0" border="0" style="border-collapse:collapse;border-spacing:0;width:100%;">
-                                    <tr>
-                                        <td height="12" style="font-size:0;line-height:0;">&nbsp;</td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            <span style="color:rgb(77,77,77);font-size:11px;margin-right:20px;"><a href="https://stackedfarm.com/" style="color:rgb(77,77,77);text-decoration:none;" target="_blank">stackedfarm.com</a></span>
-                                            <span style="color:rgb(77,77,77);font-size:11px;margin-right:20px;"><a href="https://www.linkedin.com/company/stackedfarm/" style="color:rgb(77,77,77);text-decoration:none;" target="_blank">LinkedIn</a></span>
-                                            <span style="color:rgb(77,77,77);font-size:11px;"><a href="https://www.instagram.com/stackedfarm/" style="color:rgb(77,77,77);text-decoration:none;" target="_blank">Instagram</a></span>
+                            <td valign="top" style="padding:0px;vertical-align:top;">
+                                <!-- Spacer row -->
+                                <div style="font-size:0;line-height:0;height:10px;overflow:hidden;display:block;margin:0;padding:0;">&nbsp;</div>
+                                <!-- Social Links -->
+                                <table cellpadding="0" cellspacing="0" border="0" style="border-collapse:collapse;border-spacing:0;">
+                                    <tr style="height:22px;">
+                                        <td style="padding:0 20px 0 0;">
+                                            <!-- Force vertical spacing with fixed height element -->
+                                            <a href="https://stackedfarm.com/" style="font-size:11px;color:rgb(77,77,77);text-decoration:none;display:inline-block;" target="_blank">stackedfarm.com</a>
+                                        </td>
+                                        <td style="padding:0 20px 0 0;">
+                                            <a href="https://www.linkedin.com/company/stackedfarm/" style="font-size:11px;color:rgb(77,77,77);text-decoration:none;display:inline-block;" target="_blank">LinkedIn</a>
+                                        </td>
+                                        <td style="padding:0;">
+                                            <a href="https://www.instagram.com/stackedfarm/" style="font-size:11px;color:rgb(77,77,77);text-decoration:none;display:inline-block;" target="_blank">Instagram</a>
                                         </td>
                                     </tr>
                                 </table>
+                                <!-- Additional spacing below -->
+                                <div style="font-size:0;line-height:0;height:8px;overflow:hidden;display:block;margin:0;padding:0;">&nbsp;</div>
                             </td>
                         </tr>
                     </tbody>
