--- a/public/app/templates/signature.html
+++ b/public/app/templates/signature.html
@@ -44,13 +44,16 @@
                                 <!-- Spacer row -->
                                 <div style="font-size:0;line-height:0;height:10px;overflow:hidden;display:block;margin:0;padding:0;">&nbsp;</div>
                                 <!-- Social Links -->
-                                <table cellpadding="0" cellspacing="0" border="0" style="border-collapse:collapse;border-spacing:0;">
+                                <table cellpadding="0" cellspacing="0" border="0" style="border-collapse:collapse;border-spacing:0;width:100%;">
                                     <tr style="height:22px;">
-                                        <td style="padding:0 20px 0 0;">
+                                        <td style="padding:0;width:49px;">
+                                            <span style="font-size:11px;color:rgb(77,77,77);">Links:</span>
+                                        </td>
+                                        <td style="padding:0 12px 0 0;">
                                             <!-- Force vertical spacing with fixed height element -->
                                             <a href="https://stackedfarm.com/" style="font-size:11px;color:rgb(77,77,77);text-decoration:none;display:inline-block;" target="_blank">stackedfarm.com</a>
                                         </td>
-                                        <td style="padding:0 20px 0 0;">
+                                        <td style="padding:0 12px 0 0;">
                                             <a href="https://www.linkedin.com/company/stackedfarm/" style="font-size:11px;color:rgb(77,77,77);text-decoration:none;display:inline-block;" target="_blank">LinkedIn</a>
                                         </td>
                                         <td style="padding:0;">
