Simplify social media links to match exact structure of Offices line

--- a/app/templates/signature.html
+++ b/app/templates/signature.html
@@ -40,29 +40,10 @@
                         </tr>
                         {% endif %}
                         <tr>
-                            <td valign="top" style="padding:0px;vertical-align:top;">
-                                <!-- Spacer row -->
-                                <div style="font-size:0;line-height:0;height:10px;overflow:hidden;display:block;margin:0;padding:0;">&nbsp;</div>
-                                <!-- Social Links -->
-                                <table cellpadding="0" cellspacing="0" border="0" style="border-collapse:collapse;border-spacing:0;width:100%;">
-                                    <tr style="height:22px;">
-                                        <td style="padding:0;width:49px;">
-                                            <span style="font-size:11px;color:rgb(77,77,77);">Links:</span>
-                                        </td>
-                                        <td style="padding:0 12px 0 0;">
-                                            <!-- Force vertical spacing with fixed height element -->
-                                            <a href="https://stackedfarm.com/" style="font-size:11px;color:rgb(77,77,77);text-decoration:none;display:inline-block;" target="_blank">stackedfarm.com</a>
-                                        </td>
-                                        <td style="padding:0 12px 0 0;">
-                                            <a href="https://www.linkedin.com/company/stackedfarm/" style="font-size:11px;color:rgb(77,77,77);text-decoration:none;display:inline-block;" target="_blank">LinkedIn</a>
-                                        </td>
-                                        <td style="padding:0;">
-                                            <a href="https://www.instagram.com/stackedfarm/" style="font-size:11px;color:rgb(77,77,77);text-decoration:none;display:inline-block;" target="_blank">Instagram</a>
-                                        </td>
-                                    </tr>
-                                </table>
-                                <!-- Additional spacing below -->
-                                <div style="font-size:0;line-height:0;height:8px;overflow:hidden;display:block;margin:0;padding:0;">&nbsp;</div>
+                            <td valign="top" style="padding:0px 0px 7px;vertical-align:top">
+                                <p style="padding:0px;vertical-align:top;color:rgb(0,0,0);line-height:normal;font-size:12px;letter-spacing:0.2px;margin:0px!important">
+                                    Links: <a href="https://stackedfarm.com/" style="color:rgb(0,0,0);font-size:11px;" target="_blank">stackedfarm.com</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="https://www.linkedin.com/company/stackedfarm/" style="color:rgb(0,0,0);font-size:11px;" target="_blank">LinkedIn</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="https://www.instagram.com/stackedfarm/" style="color:rgb(0,0,0);font-size:11px;" target="_blank">Instagram</a>
+                                </p>
                             </td>
                         </tr>
                     </tbody>
