Significantly increase horizontal spaaaacing after social media links

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -1,10 +1,10 @@
 :root {
-    --primary-color: #4CAF50;
+    --primary-color: #324F35;
     --secondary-color: #333;
     --background-color: #f8f8f8;
     --border-color: #ddd;
     --text-color: #333;
-    --success-color: #4CAF50;
+    --success-color: #324F35;
     --error-color: #f44336;
 }
 
